Fix mobile alignment, input autofill ghosting, and button duplication

--- a/src/index.css
+++ b/src/index.css
@@ -94,6 +94,22 @@
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Playfair Display', serif;
   }
+
+  /* Fix for browser autofill background and text misalignment */
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover, 
+  input:-webkit-autofill:focus, 
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus {
+    -webkit-text-fill-color: currentColor !important;
+    -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+
+  input, textarea {
+    line-height: normal !important;
+  }
 }
 
 @layer utilities {
